# VATUnix

./: CMakeLists.txt  README.md
include/: AppGlobals.h  VATUnix.h  about_page.h  cli_utils.h  file_utils.h  fts_page.h  home_window.h  software_page.h  wine_utils.h  wizard_buttons.h
src/: AppGlobals.cpp  VATUnix.cpp  about_page.cpp  cli_utils.cpp  file_utils.cpp  fts_page.cpp  home_window.cpp  main.cpp  software_page.cpp  wine_utils.cpp  wizard_buttons.cpp
src/FTS/: dependencies_page.cpp  dependencies_page.h  software_choice_page.cpp  software_choice_page.h  software_page.cpp  software_page.h  start_page.cpp  start_page.h  wine_page.cpp  wine_page.h
src/softwares/: euroscope.cpp  euroscope.h
